Spring-Boot/my_build_log_3.txt

> Task :compileJava FAILED
C:\Users\yoons\OneDrive\문서\GitHub\FullStack-FrameWork-Study\Spring-Boot\src\main\java\com\example\demo\S3Service.java:3: error: package com.amazonaws.services.s3 does not exist
import com.amazonaws.services.s3.AmazonS3;
                                ^
C:\Users\yoons\OneDrive\문서\GitHub\FullStack-FrameWork-Study\Spring-Boot\src\main\java\com\example\demo\S3Service.java:4: error: package com.amazonaws.services.s3.model does not exist
import com.amazonaws.services.s3.model.PutObjectRequest;
                                      ^
C:\Users\yoons\OneDrive\문서\GitHub\FullStack-FrameWork-Study\Spring-Boot\src\main\java\com\example\demo\S3Service.java:19: error: cannot find symbol
    private AmazonS3 s3Client;
            ^
  symbol:   class AmazonS3
  location: class S3Service
C:\Users\yoons\OneDrive\문서\GitHub\FullStack-FrameWork-Study\Spring-Boot\src\main\java\com\example\demo\S3Service.java:31: error: cannot find symbol
        s3Client.putObject(new PutObjectRequest(bucketName, fileName, fileObj));
                               ^
  symbol:   class PutObjectRequest
  location: class S3Service
4 errors

[Incubating] Problems report is available at: file:///C:/Users/yoons/OneDrive/%EB%AC%B8%EC%84%9C/GitHub/FullStack-FrameWork-Study/Spring-Boot/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler output below.
  C:\Users\yoons\OneDrive\문서\GitHub\FullStack-FrameWork-Study\Spring-Boot\src\main\java\com\example\demo\S3Service.java:19: error: cannot find symbol
      private AmazonS3 s3Client;
              ^
    symbol:   class AmazonS3
    location: class S3Service
  C:\Users\yoons\OneDrive\문서\GitHub\FullStack-FrameWork-Study\Spring-Boot\src\main\java\com\example\demo\S3Service.java:31: error: cannot find symbol
          s3Client.putObject(new PutObjectRequest(bucketName, fileName, fileObj));
                                 ^
    symbol:   class PutObjectRequest
    location: class S3Service
  C:\Users\yoons\OneDrive\문서\GitHub\FullStack-FrameWork-Study\Spring-Boot\src\main\java\com\example\demo\S3Service.java:3: error: package com.amazonaws.services.s3 does not exist
  import com.amazonaws.services.s3.AmazonS3;
                                  ^
  C:\Users\yoons\OneDrive\문서\GitHub\FullStack-FrameWork-Study\Spring-Boot\src\main\java\com\example\demo\S3Service.java:4: error: package com.amazonaws.services.s3.model does not exist
  import com.amazonaws.services.s3.model.PutObjectRequest;
                                        ^
  4 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (powered by Develocity).

BUILD FAILED in 3s
1 actionable task: 1 executed
